fix(overflow): delete duplicated overflow hidden

--- a/src/styles/sass/components/_smart-input.scss
+++ b/src/styles/sass/components/_smart-input.scss
@@ -33,7 +33,6 @@
     &__input {
         background-color: $color-dark-medium;
         border-radius: $smart-input-border-radius;
-        outline: none;
         border: none;
         height: $smart-input-height;
         min-width: $smart-input-width;
